<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@id/title_content"
        android:layout_marginTop="@dimen/xx_large_dimen"
        android:scaleX="-1"
        android:alpha="0.8"
        android:src="@drawable/lakitu"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/title_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xx_large_dimen"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:text="@string/welcome"
            android:textColor="@color/yellow"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/medium_dimen"
            android:textSize="36sp"
            android:text="@string/app_name"
            android:textColor="@color/white"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/options_content"
        android:layout_below="@id/title_content"
        android:layout_above="@id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="62dp"
            android:layout_marginTop="@dimen/x_large_dimen"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/green"
            android:text="@string/play"
            android:textSize="28sp"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/corner_radius"/>

        <LinearLayout
            android:id="@+id/difficult_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/green"
                android:text="@string/easy_difficult"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/corner_radius"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/medium_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/yellow"
                android:text="@string/medium_difficult"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/corner_radius"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/red"
                android:text="@string/hard_difficult"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:cornerRadius="@dimen/corner_radius"/>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/block"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-48dp"
        android:layout_marginEnd="@dimen/large_dimen"
        android:layout_above="@id/mario_image"
        android:layout_alignParentEnd="true"
        app:cardCornerRadius="@dimen/corner_radius">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/question_block"
            tools:ignore="ContentDescription" />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/mario_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginBottom="-48dp"
        android:layout_alignParentBottom="true"
        android:src="@drawable/mario_thinking"
        tools:ignore="ContentDescription" />

</RelativeLayout>